force-app/main/default/objects/Contact/fields/Leave_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Status__c</fullName>
    <label>Leave Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>