force-app/main/default/objects/Contact/fields/Salary_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Date__c</fullName>
    <description>Date on which salary will be received.</description>
    <formula>IF(MONTH(TODAY()) = 12, 
DATE( YEAR(TODAY() + 1 ), MONTH(TODAY()) + 1, 1) - 1, 
DATE( YEAR(TODAY() ), MONTH(TODAY()) + 1, 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Date</label>
    <type>Date</type>
</CustomField>