force-app/main/default/objects/Contact/fields/Track_History__c.field-meta.xml
<CustomField>
    <fullName>Track_History__c</fullName>
    <label>Track History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>