force-app/main/default/objects/Contact/fields/Twitter_Image_URL_Normal__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Image_URL_Normal__c</fullName>
    <formula>&quot;https://twitter.com/&quot;+Twitter_Handle__c+&quot;/profile_image?size=normal&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter Image URL Normal</label>
    <type>Text</type>
</CustomField>