force-app/main/default/objects/Contact/fields/Twitter_Image_URL_Original__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Image_URL_Original__c</fullName>
    <formula>&quot;https://twitter.com/&quot;+Twitter_Handle__c+&quot;/profile_image?size=original&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter Image URL Original</label>
    <type>Text</type>
</CustomField>