force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT( ISBLANK( AccountId ) ),
 Account.ShippingPostalCode &lt;&gt;  MailingPostalCode )</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Contact must be in Account ZIP Code</errorMessage>
</ValidationRule>